--- a/index.ipynb
+++ b/index.ipynb
@@ -523,7 +523,7 @@
     "greetings = ['hello', 'bonjour', 'hola', 'hallo', 'ciao', 'ola', 'namaste', 'salam']\n",
     "\n",
     "def starts_with_h(words):\n",
-    "    selected = []\n",
+    "    open = []\n",
     "    for word in words:\n",
     "        if word.startswith('h'):\n",
     "            selected.append(word)\n",
